1278 - added createList
